// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfflineBanner renders correctly when back online 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 12,
        "elevation": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 4,
        "marginHorizontal": 16,
        "marginTop": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 10,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
      },
      {
        "backgroundColor": "#10B981",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontSize": 13,
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    ✓ Back online
  </Text>
</View>
`;

exports[`OfflineBanner renders correctly when offline 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 12,
        "elevation": 3,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 4,
        "marginHorizontal": 16,
        "marginTop": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 10,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
      },
      {
        "backgroundColor": "#1F2937",
        "borderColor": "#374151",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      {
        "color": "#FFFFFF",
        "fontSize": 13,
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    ⚠ No internet connection — showing saved content
  </Text>
</View>
`;
